--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <body>
+      <h1>Buster's Best Bowling Alley</h1>
+    </body>
+  </head>
 </html>
