--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,6 @@
  <!DOCTYPE html>
  <html>
-         <h1>"Buster's Best Bowling Alley"</h1>
+    <body>
+       <h1>"Buster's Best Bowling Alley"</h1>
+    </body>
  </html>
